--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="contenedor">
         <p>Únete a las redes sociales de Rosario Ochoa:</p>
         <div class="enlaces">
-            <a href="#" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-            <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@rosarioochoalider?_t=ZM-8ttgaMIrEsp&_r=1" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.facebook.com/share/1Tz7pt6ioA/" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/rosarioochoatransforma?utm_source=qr&igsh=NDAxdG9uMWx6Zmp1" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
 
