--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>¡Sigue el movimiento y conéctate a nuestras redes!</h2>
 
-    <img src="Somos.jpg" alt="Imagen superior" class="imagen">
+    <img src="Imagen de WhatsApp 2025-02-17 a las 16.52.56_d0488237.jpg" alt="Imagen superior" class="imagen">
 
     <div class="contenedor">
         <p>Únete a las redes sociales de Rosario Ochoa:</p>
@@ -21,6 +21,14 @@
         </div>
     </div>
 
-    <img src="Somos 2.jpg " alt="Imagen inferior">
+    <div class="contenedor">
+        <p>Únete a las redes sociales de Eduardo Amador:</p>
+        <div class="enlaces">
+            <a href="https://www.tiktok.com/@rosarioochoalider?_t=ZM-8ttgaMIrEsp&_r=1" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.facebook.com/share/1Tz7pt6ioA/" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/rosarioochoatransforma?utm_source=qr&igsh=NDAxdG9uMWx6Zmp1" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+    <img src="somos mas 22.jpg" alt="Imagen inferior">
 </body>
 </html>
