--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div class="contenedor">
         <p>Únete a las redes sociales de Eduardo Amador:</p>
         <div class="enlaces">
-            <a href="https://www.tiktok.com/@rosarioochoalider?_t=ZM-8ttgaMIrEsp&_r=1" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
-            <a href="https://www.facebook.com/share/1Tz7pt6ioA/" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/rosarioochoatransforma?utm_source=qr&igsh=NDAxdG9uMWx6Zmp1" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.tiktok.com/@eduardoamadorm14?_t=ZM-8u0G9WwcWJy&_r=1" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.facebook.com/share/1FY8Qqz9jo/" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/eduardo_amador_m14?igsh=NGUyOG55emVpZzJx" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     <img src="somos mas 22.jpg" alt="Imagen inferior">
