--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h2>¡Sigue el movimiento y conéctate a nuestras redes!</h2>
 
-    <img src="Imagen de WhatsApp 2025-02-17 a las 16.52.56_d0488237.jpg" alt="Imagen superior" class="imagen">
+    <img src="Somos.jpg" alt="Imagen superior" class="imagen">
 
     <div class="contenedor">
         <p>Únete a las redes sociales de Rosario Ochoa:</p>
@@ -21,6 +21,9 @@
         </div>
     </div>
 
+    <img src="Somos 2.jpg" alt="Imagen inferior">
+
+    <img src="Imagen de WhatsApp 2025-02-17 a las 16.52.56_d0488237.jpg" alt="Imagen superior" class="imagen">
     <div class="contenedor">
         <p>Únete a las redes sociales de Eduardo Amador:</p>
         <div class="enlaces">
@@ -30,5 +33,6 @@
         </div>
     </div>
     <img src="somos mas 22.jpg" alt="Imagen inferior">
+
 </body>
 </html>
